--- a/src/app/page/group/group.component.scss
+++ b/src/app/page/group/group.component.scss
@@ -42,7 +42,8 @@
   }
 
   .chat {
-    margin-left: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
     height: calc(100% - #{$CHAT_FOOTER_HEIGHT});
     width: 400px;
     overflow: auto;
